# sic-optimization

./: .gitignore  CMakeLists.txt  README.md  run_prod.sh  run_test.sh
data/: prelim_dist.csv  prelim_time.csv  total_distance.csv  total_time.csv  total_time_2.csv
data/prod/: large_graph_time.csv  medium_graph_dist.csv  medium_graph_time.csv  small_graph_dist.csv  small_graph_time.csv
data/prod_backup/: large_graph_dist.csv  medium_graph_time.csv  small_graph_dist.csv  small_graph_time.csv
data/test/: test_dist.csv  test_time.csv
docs/: index.md
figures/: prelim_dist_figure.html  prelin_dist_figure.html  total_dist_figure.html  total_time_figure.html
src/: AntColonySystem.cpp  AntColonySystem.hpp  AntSystem.cpp  AntSystem.hpp  Env.cpp  Env.hpp  ExactAlgorithms.cpp  ExactAlgorithms.hpp  HeuristicDataHandler.hpp  NearestNeighbor.cpp  NearestNeighbor.hpp  SimulatedAnnealing.cpp  SimulatedAnnealing.hpp  Utils.cpp  Utils.hpp  main.cpp
src/analysis/: main.py
src/viz/: viz.py
tests/: main_test.cpp
